--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 # Node artifact files
 node_modules/
 dist/
+.cache/
+.parcel-cache/
 
 # Compiled Java class files
 *.class
@@ -41,10 +43,9 @@ Thumbs.db
 *.war
 
 # Large media files
-*.mp4
+# *.mp4
 *.tiff
 *.avi
 *.flv
 *.mov
 *.wmv
-
