--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "clear": "rm -rf dist .parcel-cache",
     "dev": "npm run clear && PARCEL_WORKERS=1 parcel",
-    "build": "npm run clear && PARCEL_WORKERS=1 parcel build --no-cache --no-content-hash --public-url ./ --no-scope-hoist",
+    "build": "npm run clear && NODE_OPTIONS=--max-old-space-size=8192 PARCEL_WORKERS=1 parcel build --no-cache --no-content-hash --public-url ./ --no-scope-hoist",
     "rename": "node rename.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
